ready for experiments

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation 'com.google.guava:guava:11.0.2'
 
+    // https://mvnrepository.com/artifact/com.beust/jcommander
+    implementation 'com.beust:jcommander:1.82'
+
+
 
 }
 
